[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocess-DAS"
version = "0.1.0"
description = "Tools for DAS data preprocessing"
authors = [
  { name = "Dr. Eric R. Snyder", email = "esnyder@cornell.edu" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "h5py",
    "DAS4Whales @ git+https://github.com/snyderer/DAS4Whales@ericsBranch"
]

[tool.setuptools.packages.find]
where = ["src"]